# photoshare

./: .gitignore  Makefile  bun.lockb  package.json  pyproject.toml
src/a_core/: settings.py  urls.py
src/a_core/static/css/: style.css  tailwind.css
src/a_posts/: models.py  views.py
src/a_posts/migrations/: 0001_initial.py
src/a_posts/templates/: base.html
src/a_posts/templates/a_posts/: home.html  post_create.html
src/a_posts/templates/includes/: header.html  hero.html  sidebar.html
src/a_posts/templates/layouts/: a.html  b.html
